crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__display__display_attribute_expansion.snap
---
source: crates/ohno_macros/src/derive_error/tests/display.rs
expression: format_tokens(result)
---
impl FileError {
    /// Creates a new error with custom fields and default message.
    pub(crate) fn new(filename: impl Into<String>) -> Self {
        Self {
            filename: filename.into(),
            inner: ohno::OhnoCore::default(),
        }
    }
    /// Creates a new error with custom fields and a specified error.
    pub(crate) fn caused_by(
        filename: impl Into<String>,
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self {
            filename: filename.into(),
            inner: ohno::OhnoCore::from(error),
        }
    }
}
impl From<std::convert::Infallible> for FileError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for FileError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner
            .format_error(
                f,
                stringify!(FileError),
                Some(
                    std::borrow::Cow::from(
                        format!("Failed to process file: {}", & self.filename),
                    ),
                ),
            )
    }
}
impl std::error::Error for FileError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl ohno::Enrichable for FileError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl ::core::fmt::Debug for FileError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct(stringify!(FileError))
            .field("filename", &self.filename)
            .field("inner", &self.inner)
            .finish()
    }
}
impl ohno::ErrorExt for FileError {
    fn message(&self) -> String {
        self.inner
            .format_message(
                stringify!(FileError),
                Some(
                    std::borrow::Cow::from(
                        format!("Failed to process file: {}", & self.filename),
                    ),
                ),
            )
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
