crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__display__display_with_format_specifiers_and_lifetime.snap
---
source: crates/ohno_macros/src/derive_error/tests/display.rs
expression: format_tokens(result)
---
impl<'a> FilesError<'a> {
    /// Creates a new error with custom fields and default message.
    pub(crate) fn new(files: impl Into<Vec<&'a str>>) -> Self {
        Self {
            files: files.into(),
            inner: ohno::OhnoCore::default(),
        }
    }
    /// Creates a new error with custom fields and a specified error.
    pub(crate) fn caused_by(
        files: impl Into<Vec<&'a str>>,
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self {
            files: files.into(),
            inner: ohno::OhnoCore::from(error),
        }
    }
}
impl<'a> From<std::convert::Infallible> for FilesError<'a> {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl<'a> std::fmt::Display for FilesError<'a> {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.inner
            .format_error(
                f,
                stringify!(FilesError),
                Some(
                    std::borrow::Cow::from(
                        format!("Failed to process files: {:?}", & self.files),
                    ),
                ),
            )
    }
}
impl<'a> std::error::Error for FilesError<'a> {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.inner.source()
    }
}
impl<'a> ohno::Enrichable for FilesError<'a> {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.inner.add_enrichment(entry);
    }
}
impl<'a> ::core::fmt::Debug for FilesError<'a> {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct(stringify!(FilesError))
            .field("files", &self.files)
            .field("inner", &self.inner)
            .finish()
    }
}
impl<'a> ohno::ErrorExt for FilesError<'a> {
    fn message(&self) -> String {
        self.inner
            .format_message(
                stringify!(FilesError),
                Some(
                    std::borrow::Cow::from(
                        format!("Failed to process files: {:?}", & self.files),
                    ),
                ),
            )
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
